updated notebooks and README.md

--- a/scripts/_process_data.ipynb
+++ b/scripts/_process_data.ipynb
@@ -179,7 +179,7 @@
     "### =================================================\n",
     "### 6.1 Delete ds_out from memory\n",
     "### =================================================\n",
-    "del ds_out"
+    "del ds, ds_out, ds_grid"
    ]
   },
   {
@@ -273,7 +273,9 @@
     "### =================================================\n",
     "### 4.1 Delete ds_out from memory\n",
     "### =================================================\n",
-    "del ds_out"
+    "del ds, ds_out, ds_grid\n",
+    "del ES_shp, fields, polygons\n",
+    "del beaches_norm, water_norm, marina_norm, boatlaunch_norm, boating_norm"
    ]
   },
   {
@@ -351,7 +353,12 @@
     "### ===================================\n",
     "print('save to netcdf')\n",
     "data_clean='/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/data/clean/'\n",
-    "ds_mjja.to_netcdf(f'{data_clean}phosphorus_avg_MJJA.nc')"
+    "ds_mjja.to_netcdf(f'{data_clean}phosphorus_avg_MJJA.nc')\n",
+    "\n",
+    "### ===================================\n",
+    "### 5.1 wipe memory\n",
+    "### ===================================\n",
+    "del ds, ds_mjja"
    ]
   },
   {
@@ -423,7 +430,7 @@
     "### ===================================\n",
     "### 4.1 Delete ds_out from memory\n",
     "### ===================================\n",
-    "del ds_out"
+    "del ds_out, ds_mjja"
    ]
   },
   {
@@ -703,7 +710,7 @@
     "### ===================================\n",
     "### 3.1 Delete ds_out from memory\n",
     "### ===================================\n",
-    "del ds_out"
+    "del ds_out, ds_grid"
    ]
   },
   {
@@ -768,7 +775,7 @@
     "### ===================================\n",
     "### 4.1 Delete ds_out from memory\n",
     "### ===================================\n",
-    "del ds_out"
+    "del ds_out, ds_mjja"
    ]
   },
   {
@@ -845,7 +852,8 @@
     "### ==============================================================\n",
     "### 4.1 delete ds_out\n",
     "### ==============================================================\n",
-    "del ds_out"
+    "del ds_out, ds_phos, ds_temp,\n",
+    "del T_may, T_august, phos_may, phos_august"
    ]
   },
   {
@@ -936,8 +944,8 @@
     "### ==============================================================\n",
     "### 7.1 memory management\n",
     "### ==============================================================\n",
-    "del ds_out\n",
-    "del tmp"
+    "del ds, ds_grid, ds_out, tmp\n",
+    "del phos_2007, phos_2008, phos_2008, phos_2010"
    ]
   },
   {
