added create_wrtds_tracer_input.ipynb to scripts

--- a/scripts/create_wrtds_tracer_input.ipynb
+++ b/scripts/create_wrtds_tracer_input.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -110,17 +108,17 @@
     "\n",
     "# Store fileName, lat of mouth and lon of mouth\n",
     "wrtds_dir = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/data/raw/wrtds/' \n",
-    "stations = {'053210': [wrtds_dir + 'Fox_053210.csv', 44.54, -88.005, 'Fox'],\n",
-    "            '04126010': [wrtds_dir + 'Manistee_04126010.csv', 44.25, -86.34453, 'Manistee'],\n",
-    "            '04122030': [wrtds_dir + 'Muskegon_04122030.csv', 43.227089, -86.341987, 'Muskegon'],\n",
-    "            '04102080': [wrtds_dir + 'St_Joseph_04102080.csv', 42.114167, -86.488333, 'St Joseph'],\n",
-    "            '04119400': [wrtds_dir + 'Grand_04119400.csv', 43.05835, -86.25088, 'Grand'],\n",
-    "            '04057004': [wrtds_dir + 'Manistique_04057004.csv', 45.948, -86.246, 'Manistique'],\n",
-    "            '04122500': [wrtds_dir + 'Pere_Marquette_04122500.csv', 43.951667, -86.460278, 'Pere Marquette'],\n",
-    "            '383088': [wrtds_dir + 'Menominee_383088.csv', 45.0947, -87.59121, 'Menominee'],\n",
-    "            '04108660': [wrtds_dir + 'Kalamazoo_04108660.csv', 42.67669, -86.21531, 'Kalamazoo'],\n",
-    "            '413640': [wrtds_dir + 'Milwaukee_413640.csv', 43.025556, -87.894831, 'Milwaukee'],\n",
-    "            '603095': [wrtds_dir + 'Sheboygan_603095.csv', 43.748976, -87.702149, 'Sheboygan']}"
+    "stations = {'053210': [f'{wrtds_dir}Fox_053210.csv', 44.54, -88.005, 'Fox'],\n",
+    "            '04126010': [f'{wrtds_dir}Manistee_04126010.csv', 44.25, -86.34453, 'Manistee'],\n",
+    "            '04122030': [f'{wrtds_dir}Muskegon_04122030.csv', 43.227089, -86.341987, 'Muskegon'],\n",
+    "            '04102080': [f'{wrtds_dir}St_Joseph_04102080.csv', 42.114167, -86.488333, 'St Joseph'],\n",
+    "            '04119400': [f'{wrtds_dir}Grand_04119400.csv', 43.05835, -86.25088, 'Grand'],\n",
+    "            '04057004': [f'{wrtds_dir}Manistique_04057004.csv', 45.948, -86.246, 'Manistique'],\n",
+    "            '04122500': [f'{wrtds_dir}Pere_Marquette_04122500.csv', 43.951667, -86.460278, 'Pere Marquette'],\n",
+    "            '383088': [f'{wrtds_dir}Menominee_383088.csv', 45.0947, -87.59121, 'Menominee'],\n",
+    "            '04108660': [f'{wrtds_dir}Kalamazoo_04108660.csv', 42.67669, -86.21531, 'Kalamazoo'],\n",
+    "            '413640': [f'{wrtds_dir}Milwaukee_413640.csv', 43.025556, -87.894831, 'Milwaukee'],\n",
+    "            '603095': [f'{wrtds_dir}Sheboygan_603095.csv', 43.748976, -87.702149, 'Sheboygan']}"
    ]
   },
   {
@@ -141,8 +139,8 @@
     "# Read data\n",
     "siteID = '053210'\n",
     "riverName = stations[siteID][3]\n",
-    "year = 2008\n",
-    "df = pd.read_csv(stations['04126010'][0], index_col='Date')\n",
+    "year = 2007\n",
+    "df = pd.read_csv(stations[siteID][0], index_col='Date')\n",
     "\n",
     "# Convert index to dates\n",
     "df.index = df.index.astype('datetime64[ns]')\n",
@@ -268,7 +266,7 @@
    "source": [
     "# Write to binary file\n",
     "#fileName = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/model/inputs/river_' + siteID + '_'+ str(year) + '.bin'\n",
-    "dir_model = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/model/'\n",
+    "dir_model = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/model/inputs/'\n",
     "fileName = f'{dir_model}inputs/river_{siteID}_{year}.bin'\n",
     "export_binary(fileName, surfaceForcing)\n",
     "\n",
@@ -316,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cartopy",
    "language": "python",
-   "name": "python3"
+   "name": "cartopy"
   },
   "language_info": {
    "codemirror_mode": {
@@ -330,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
