--- a/notebooks/Figure_4.ipynb
+++ b/notebooks/Figure_4.ipynb
@@ -6,24 +6,24 @@
    "source": [
     "# Figure 4\n",
     "\n",
-    "## Caption\n",
+    "## Cumulative stress days for each river. \n",
     "Cumulative stress days (CSD) for each summer month, calculated separately for each river plume in North (blue), East (green), West (purple) regions. Average phosphorous concentration within each tributary plume (in gPL-1) shown beside each bar. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gloege/anaconda3/envs/cartopy/lib/python3.6/site-packages/cmocean/tools.py:76: MatplotlibDeprecationWarning: The is_string_like function was deprecated in version 2.1.\n",
+      "  if not mpl.cbook.is_string_like(rgbin[0]):\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from matplotlib import rcParams\n",
@@ -31,11 +31,6 @@
     "rcParams['font.sans-serif'] = ['Arial']\n",
     "rcParams['pdf.fonttype'] = 42\n",
     "rcParams['ps.fonttype'] = 42\n",
-    "rcParams['font.size']=12\n",
-    "rcParams['xtick.labelsize']=16\n",
-    "rcParams['ytick.labelsize']=1b\n",
-    "rcParams['axes.labelsize']=16\n",
-    "rcParams['axes.titlesize']=16\n",
     "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -62,13 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dir_clean = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/data/clean/'\n",
+    "### Define directories\n",
+    "dir_clean = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/data/clean/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Load data\n",
     "ds_avgTP = xr.open_dataset(f'{dir_clean}avg_TP_within_plume_all_rivers_MJJA.nc')\n",
     "ds_csd = xr.open_dataset(f'{dir_clean}cumulative_stress_days_all_rivers_JJA.nc')"
    ]
@@ -77,12 +84,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate figure"
+    "# Generate Figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +190,8 @@
     "ax.grid(axis='x', b=True, which='major', color=[0.8, 0.8, 0.8], linestyle='-')\n",
     "ax.set_axisbelow(True)\n",
     "\n",
+    "### If you do not want the bars to touch to the top and bottom\n",
+    "### Just add a factor to these values\n",
     "ax.set_ylim(-(width+width/2), 14+width+width/2)\n",
     "plt.gca().invert_yaxis()\n"
    ]
