streamlined threshold script

--- a/scripts/_calculate_threshold_concentration.ipynb
+++ b/scripts/_calculate_threshold_concentration.ipynb
@@ -11,7 +11,7 @@
     "3. Calculate well mixed concentration (Load/Vol) (units mg/m3 == ug/L)\n",
     "\n",
     "### Results\n",
-    "- Volume is 4.8987714449E12 m3 (Pretty)\n",
+    "- Volume is 4.8987714449E12 m3 (close to what google tells me)\n",
     "- Annual load is 1.90375E12 mg\n",
     "- Well mixed concentration is 0.389 mg/m3"
    ]
@@ -24,6 +24,7 @@
    },
    "outputs": [],
    "source": [
+    "import xarray as xr\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -36,8 +37,52 @@
    },
    "outputs": [],
    "source": [
-    "### class to make loading river data easy\n",
-    "%run -i /Users/gloege/Documents/Projects/lakeMichigan/scripts/load_rivers.py"
+    "def get_model_grid():\n",
+    "    \"\"\"\n",
+    "    docstring\n",
+    "    SA : surface area of each cell (m2)\n",
+    "    depth : depth of each cell (m)\n",
+    "    lon : longitude (deg)\n",
+    "    lat : latitude (deg)\n",
+    "    drF : r cell face separation (m)\n",
+    "    rA : face area at cell (m)\n",
+    "    dlon : diff in lon (deg)\n",
+    "    dlat : diff in lat (deg)\n",
+    "    volCell : volume of surface cells (m3)\n",
+    "    volLake : volume of lake (m3)\n",
+    "    \"\"\"\n",
+    "    # Read grid file\n",
+    "    gridDir = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/data/raw/'\n",
+    "    gridFile = gridDir + 'grid_lake_michigan.nc'\n",
+    "    ds = xr.open_dataset(gridFile)\n",
+    "\n",
+    "    # Variables\n",
+    "    SA = ds['rA'].values\n",
+    "    depth = ds['Depth'].values\n",
+    "    lon = ds['X'].values\n",
+    "    lat = ds['Y'].values\n",
+    "    drF = ds['drF'].values\n",
+    "    rA = ds['rA'].values\n",
+    "    dlon = np.diff(lon[0:2]) / 2\n",
+    "    dlat = np.diff(lat[0:2]) / 2\n",
+    "    volCell = rA * drF[0]\n",
+    "    vol = SA * depth\n",
+    "    volLake = np.sum(vol.flat)\n",
+    "\n",
+    "    # output\n",
+    "    out = {'SA': SA,\n",
+    "           'depth': depth,\n",
+    "           'lon': lon,\n",
+    "           'lat': lat,\n",
+    "           'drF': drF,\n",
+    "           'rA': rA,\n",
+    "           'dlon': dlon,\n",
+    "           'dlat': dlat,\n",
+    "           'volCell': volCell,\n",
+    "           'vol': vol,\n",
+    "           'volLake': volLake}\n",
+    "\n",
+    "    return out"
    ]
   },
   {
@@ -62,14 +107,9 @@
    ],
    "source": [
     "### ==========================================================\n",
-    "### Rivers object\n",
-    "### ==========================================================\n",
-    "riv = load_rivers()\n",
-    "\n",
-    "### ==========================================================\n",
     "### Load grid\n",
     "### ==========================================================\n",
-    "grid = riv.get_model_grid()\n",
+    "grid = get_model_grid()\n",
     "\n",
     "### ==========================================================\n",
     "### Define Variables \n",
@@ -81,7 +121,7 @@
     "### ==========================================================\n",
     "### 1. Read data\n",
     "### ==========================================================\n",
-    "ploadDir = '/Users/gloege/Documents/Projects/lakeMichigan/data/'\n",
+    "ploadDir = '/Users/gloege/Documents/Projects/MITgcm-Michigan-Phosphorus/data/raw/'\n",
     "df_dolan = pd.read_csv(ploadDir + 'dolan_pload_1994_2008_MTyr.csv', index_col='river')\n",
     "df_wrtds = pd.read_csv(ploadDir + 'wrtds_pload_2007_2010_MTyr.csv', index_col='river')\n",
     "\n",
@@ -104,6 +144,15 @@
     "conc = annual_load/vol\n",
     "print(conc, ' mg/m3')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
