Updeated processing script. Confirmed did not mess up these figures

--- a/notebooks/Figure_3.ipynb
+++ b/notebooks/Figure_3.ipynb
@@ -85,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.offsetbox.AnchoredText at 0x1a19ab6240>"
+       "<matplotlib.offsetbox.AnchoredText at 0x11a051048>"
       ]
      },
      "execution_count": 4,
