--- a/notebooks/Supplemental_Figure_5.ipynb
+++ b/notebooks/Supplemental_Figure_5.ipynb
@@ -123,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.offsetbox.AnchoredText at 0x112a7b2e8>"
+       "<matplotlib.offsetbox.AnchoredText at 0x110aa4f28>"
       ]
      },
      "execution_count": 4,
