--- a/notebooks/Figure_1.ipynb
+++ b/notebooks/Figure_1.ipynb
@@ -314,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cartopy",
+   "display_name": "Python3 (dev,luke)",
    "language": "python",
-   "name": "cartopy"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
