--- a/notebooks/Figure_4.ipynb
+++ b/notebooks/Figure_4.ipynb
@@ -208,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cartopy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cartopy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
