--- a/notebooks/Figure_5.ipynb
+++ b/notebooks/Figure_5.ipynb
@@ -346,9 +346,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cartopy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cartopy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
