--- a/notebooks/Supplemental_Figure_1.ipynb
+++ b/notebooks/Supplemental_Figure_1.ipynb
@@ -101,9 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Generate Figure"
    ]
@@ -328,9 +326,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cartopy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cartopy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -342,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
