--- a/notebooks/_run_figure_notebooks.ipynb
+++ b/notebooks/_run_figure_notebooks.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "#### Notes\n",
     "- `%run` will run each notebook\n",
-    "- `%rest -f` will remove all variables. So there are no variable conflicts between notebooks"
+    "- `%rest -f` will remove all variables. So there are no variable conflicts between notebooks\n",
+    "- You can not make a `notebook_dir` variable, since I reset after each cell. "
    ]
   },
   {
@@ -74,6 +75,7 @@
    },
    "outputs": [],
    "source": [
+    "## This results everything\n",
     "%reset -f"
    ]
   },
@@ -720,9 +722,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cartopy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cartopy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -734,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
